# RAG

./: .gitignore  pyproject.toml  rag_with_ollama.ipynb  readme.md
