[project]
name = "rag-ollama"
version = "0.1.0"
description = "RAG system with Ollama and LangChain"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.1.0",
    "pypdf>=3.17.1",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

